--- a/FSLAVLearningDemo/FSLAVLearningDemo/Suportting Files/Info.plist
+++ b/FSLAVLearningDemo/FSLAVLearningDemo/Suportting Files/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>音视频想要访问您的相机</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>音视频想要访问您的麦克风</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
