--- a/FSLAVLearningDemo/FSLAVLearningDemo.xcodeproj/xcshareddata/xcschemes/FSLAVLearningDemo.xcscheme
+++ b/FSLAVLearningDemo/FSLAVLearningDemo.xcodeproj/xcshareddata/xcschemes/FSLAVLearningDemo.xcscheme
@@ -65,6 +65,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      disableMainThreadChecker = "YES"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -82,11 +83,6 @@
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
-         <AdditionalOption
-            key = "NSZombieEnabled"
-            value = "YES"
-            isEnabled = "YES">
-         </AdditionalOption>
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
