--- a/FSLAVLearningDemo/FSLAVLearningDemo/Suportting Files/Info.plist
+++ b/FSLAVLearningDemo/FSLAVLearningDemo/Suportting Files/Info.plist
@@ -24,6 +24,8 @@
 	<string>音视频想要访问您的相机</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>音视频想要访问您的麦克风</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>音视频想要访问您的相册</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
